<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChatAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/chat_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/chat_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chat_name"
                android:imeActionId="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/chat_desc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/chat_desc_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeActionId="2"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:lines="5"
                android:gravity="top"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/users_invite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_invite"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/users_invite_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_group_black" />

                <TextView
                    android:id="@+id/invited_users_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>
        </RelativeLayout>
        
        <Button
            android:id="@+id/create_chat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_chat"/>
    </LinearLayout>
</ScrollView>